implement bills monthly summany
